# sample-kafka-observer

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  PUBLICATION_CHECKLIST.md  README.md  ROADMAP.md  SECURITY.md
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  config.yml
.github/workflows/: build-verify.yml  lint.yml
deploy/: observer-auto-promoter.service
docker/: Dockerfile  README.md  demo.sh  docker-compose.yml  entrypoint.sh  observer.ids
docs/: architecture.md  auto-promotion.md  deployment.md  design-story.md  eos-semantics.md  faq.md  industry-comparison.md  monitoring-alerting.md  multi-version.md  scenario-playbook.md  testing.md  timing-and-automation.md  version-matrix.md  visual-guide.md
docs/runbooks/: scenario-a-az-loss.md  (+1 more)
evidence/: auto_promoter_dryrun_evidence.md  elr_verification_evidence.md  eos_byte_level_evidence.md  kafka40_port_evidence.md  kraft_controller_patch_evidence.md  kraft_probe_evidence.md  metrics_patch_evidence.md  mm2_duplicate_evidence.md  multiversion_apply_evidence.md  observer_v3_lifecycle_evidence.md  scenario_matrix_evidence.md  txn_read_committed_evidence.md  v07_operability_evidence.md
scripts/: observer-auto-promoter.sh  observer-demote.sh  observer-promote.sh
terraform/: README.md  main.tf  outputs.tf  variables.tf  versions.tf
test/: README.md  conftest.py  pyproject.toml  test_eos.py  test_observer_lifecycle.py
tools/: apply-and-build.sh  check-anchors.sh  compile-one.sh  kraft-scenario-test.sh  zk-scenario-test.sh
(+66 files in other folders)
